--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "echarts": "^5.1.2",
+    "element-ui": "^2.15.5",
+    "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
+    "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.5.2",
+    "vue-table-with-tree-grid": "^0.2.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
